# SpoilerGaurd

./: .gitignore  pyproject.toml
attached_assets/Family_Guy/: S01E01_Death_Has_a_Shadow.srt  S01E02_I_Never_Met_the_Dead_Man.srt
attached_assets/Marvel/: Ant_Man_2015.srt  Avengers_Age_of_Ultron_2015.srt  Captain_America_The_Winter_Soldier_2014.srt  Captain_Marvel_2019.srt  Guardians_of_the_Galaxy_2014.srt  Guardians_of_the_Galaxy_Vol2_2017.srt  Iron_Man_2010.srt  Iron_Man_2013.srt  The_Avengers_2012.srt  The_Incredible_Hulk_2008.srt  The_Marvels_2023.srt  Thor_2011.srt  Thor_The_Dark_World_2013.srt
attached_assets/Marvel/Daredevil_2018/Daredevil_ season 2/: Daredevil - 2x01 - Bang.WEB.NF.en.srt  Daredevil - 2x02 - Dogs to a Gunfight.WEB.NF.en.srt  Daredevil - 2x03 - New York's Finest.WEB.NF.en.srt  Daredevil - 2x04 - Penny and Dime.WEB.NF.en.srt  Daredevil - 2x05 - Kinbaku.WEB.NF.en.srt  Daredevil - 2x06 - Regrets Only.WEB.NF.en.srt  Daredevil - 2x07 - Semper Fidelis.WEB.NF.en.srt  Daredevil - 2x08 - Guilty as Sin.WEB.NF.en.srt  Daredevil - 2x09 - Seven Minutes in Heaven.WEB.NF.en.srt  Daredevil - 2x10 - The Man in the Box.WEB.NF.en.srt  Daredevil - 2x11 - .380.WEB.NF.en.srt  Daredevil - 2x12 - The Dark at the End of the Tunnel.WEB.NF.en.srt  Daredevil - 2x13 - A Cold Day in Hell's Kitchen.WEB.NF.en.srt
client/: requirements.md
client/public/extension/: background.js  content.js  manifest.json  popup.html  popup.js  sidebar.html  sidebar.js
server_py/: __init__.py  config.py  dev.py  main.py  models.py  rag.py
(+26 files in other folders)
