[project]
name = "chatbot-core"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "langchain>=1.2.3",
    "langchain-openai>=1.1.7",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.45",
    "srt>=3.5.3",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]

[tool.setuptools.packages.find]
include = ["server_py*"]
